docs: fix extended toolbar z-index and align z-index overlays (#635)
* docs: fix extentend toolbar z-index and align z-index overlays

* refactor(@vtmn/css): add design tokens for z-indexes

--- a/packages/sources/css/src/components/modal/src/index.css
+++ b/packages/sources/css/src/components/modal/src/index.css
@@ -5,6 +5,7 @@
 @import '@vtmn/css-design-tokens/src/opacities';
 @import '@vtmn/css-design-tokens/src/shadows';
 @import '@vtmn/css-design-tokens/src/animations';
+@import '@vtmn/css-design-tokens/src/z-indexes';
 
 .vtmn-modal {
   background: hsla(
@@ -19,11 +20,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 5;
+  z-index: var(--vtmn-z-index_modal);
 }
 
 .vtmn-modal_content {
-  z-index: 6;
   background-color: var(--vtmn-semantic-color_background-primary);
   border-radius: rem(8px);
   padding: rem(32px);
